CSS: Change font colour of nav links and brand to fix Wave Validation contrast errors

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@
 
 /* Change default Boostrap color and style of Navbar*/
 .navbar-light .navbar-brand {
-    color:#fff;
+    color:#050505;
     font-family: 'Titillium Web', sans-serif;
     font-size: 36px;
     font-weight: 400;
@@ -26,7 +26,7 @@
 
  /* Change default Boostrap color and style of Nav links*/ 
   .navbar-custom .navbar-nav .nav-link {
-    color:#ff4a4b;
+    color:#050505;
     font-family: 'Titillium Web', sans-serif;
     font-size: 36px;
     font-weight: 400;
@@ -45,7 +45,7 @@
 
 /* Change default Boostrap navbar toggler colour */ 
 .navbar-light .navbar-toggler {
-    color:#ff4a4b;
+    color:#050505;
 }
 
 /*............................................Home*/
